# pyspharm

./: .gitignore  pyproject.toml
Lib/: spharm.py
src/: alf.f  gaqd.f  getlegfunc.f  hrfft.f  invlap.f  lap.f  multsmoothfact.f  onedtotwod.f  onedtotwod_vrtdiv.f  shaec.f  shaes.f  shagc.f  shags.f  shsec.f  shses.f  shsgc.f  shsgs.f  specintrp.f  sphcom.f  vhaec.f  vhaes.f  vhagc.f  vhags.f  vhsec.f  vhses.f  vhsgc.f  vhsgs.f
tests/: test_array_api.py
