[build-system]
requires = ["meson-python", "numpy<2.0; python_version<'3.10'", "numpy; python_version>='3.10'"]
build-backend = "mesonpy"

[project]
name = "pyspharm"
version = "1.0.9"
description = "Python Spherical Harmonic Transform Module"
authors = [
    { name = "Jeff Whitaker", email = "jeffrey.s.whitaker@noaa.gov" }
]
readme = "README.md"
requires-python = "<3.12"
license = { file = "LICENSE.spherepack" }
classifiers = [
    "Topic :: Scientific/Engineering :: Atmospheric Science"
]
dependencies = [ "numpy<2.0; python_version<'3.10'", "numpy; python_version>='3.10'" ]

[project.urls]
Homepage = "http://code.google.com/p/pyspharm"
Repository = "https://github.com/jswhit/pyspharm"

[project.optional-dependencies]
tests = ["pytest"]
docs = ["pdoc"]
examples = ["basemap", "matplotlib"]

[tool.setuptools]
packages = [ "spharm" ]
package-dir = { spharm = "Lib" }
