[build-system]
requires = ["meson-python", "numpy<2.0; python_version<\"3.10\"", "numpy; python_version>=\"3.10\""]
build-backend = "mesonpy"

[project]
name = "pyspharm"
version = "1.0.9"
description = "Python Spherical Harmonic Transform Module"
authors = [
    { name = "Jeff Whitaker", email = "jeffrey.s.whitaker@noaa.gov" }
]
readme = "README.md"
license = { file = "LICENSE.spherepack" }
classifiers = [
    "Topic :: Scientific/Engineering :: Atmospheric Science"
]
dependencies = [ "numpy<2.0; python_version<\"3.10\"", "numpy; python_version>=\"3.10\"" ]

[project.urls]
Homepage = "http://github.com/jswhit/pyspharm"
Repository = "https://github.com/jswhit/pyspharm"

[project.optional-dependencies]
tests = ["pytest", "hypothesis[numpy]"]
docs = ["pdoc"]
examples = ["basemap", "matplotlib"]

[tool.setuptools]
packages = [ "spharm" ]
package-dir = { spharm = "Lib" }
